Fase 1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN body TOKEN_END
Rule 2     dec_var -> vars
Rule 3     dec_var -> empty
Rule 4     dec_funs -> funs dec_funs
Rule 5     dec_funs -> empty
Rule 6     vars -> TOKEN_VAR variable rep_var
Rule 7     rep_var -> TOKEN_VAR variable rep_var
Rule 8     rep_var -> empty
Rule 9     variable -> TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON
Rule 10    mas_ids -> TOKEN_COMMA TOKEN_ID mas_ids
Rule 11    mas_ids -> empty
Rule 12    type -> TOKEN_INT
Rule 13    type -> TOKEN_FLOAT
Rule 14    body -> TOKEN_LBRACE dec_statements TOKEN_RBRACE
Rule 15    dec_statements -> statement dec_statements
Rule 16    dec_statements -> empty
Rule 17    statement -> assign
Rule 18    statement -> condition
Rule 19    statement -> cycle
Rule 20    statement -> f_call
Rule 21    statement -> print
Rule 22    print -> TOKEN_PRINT TOKEN_LPAREN expresiones TOKEN_RPAREN TOKEN_SEMICOLON
Rule 23    expresiones -> TOKEN_CTE_STRING comas
Rule 24    expresiones -> expresion comas
Rule 25    comas -> TOKEN_COMMA expresion comas
Rule 26    comas -> TOKEN_COMMA TOKEN_CTE_STRING comas
Rule 27    comas -> empty
Rule 28    cycle -> TOKEN_WHILE TOKEN_LPAREN expresion TOKEN_RPAREN TOKEN_DO body TOKEN_SEMICOLON
Rule 29    condition -> TOKEN_IF TOKEN_LPAREN expresion TOKEN_RPAREN body else TOKEN_SEMICOLON
Rule 30    else -> TOKEN_ELSE body
Rule 31    else -> empty
Rule 32    cte -> TOKEN_CTE_INT
Rule 33    cte -> TOKEN_CTE_FLOAT
Rule 34    expresion -> exp comparar
Rule 35    comparar -> signo exp
Rule 36    comparar -> empty
Rule 37    signo -> TOKEN_GT
Rule 38    signo -> TOKEN_LT
Rule 39    signo -> TOKEN_NE
Rule 40    signo -> TOKEN_GE
Rule 41    signo -> TOKEN_LE
Rule 42    signo -> TOKEN_EQ
Rule 43    exp -> termino suma_resta
Rule 44    suma_resta -> TOKEN_PLUS termino suma_resta
Rule 45    suma_resta -> TOKEN_MINUS termino suma_resta
Rule 46    suma_resta -> empty
Rule 47    opcion_mas_menos -> TOKEN_PLUS
Rule 48    opcion_mas_menos -> TOKEN_MINUS
Rule 49    termino -> factor multi_div
Rule 50    multi_div -> operacion_mul_div factor multi_div
Rule 51    multi_div -> empty
Rule 52    operacion_mul_div -> TOKEN_DIV
Rule 53    operacion_mul_div -> TOKEN_MULT
Rule 54    factor -> definicion
Rule 55    factor -> operaciones
Rule 56    definicion -> TOKEN_LPAREN expresion TOKEN_RPAREN
Rule 57    operaciones -> opciones_mas_menos id_cte
Rule 58    opciones_mas_menos -> TOKEN_PLUS
Rule 59    opciones_mas_menos -> TOKEN_MINUS
Rule 60    opciones_mas_menos -> empty
Rule 61    id_cte -> TOKEN_ID
Rule 62    id_cte -> cte
Rule 63    id_cte -> f_call_expr
Rule 64    f_call_expr -> TOKEN_ID TOKEN_LPAREN def_exp TOKEN_RPAREN
Rule 65    funs -> TOKEN_VOID TOKEN_ID TOKEN_LPAREN tipo TOKEN_RPAREN var body TOKEN_SEMICOLON
Rule 66    tipo -> def_tipo
Rule 67    tipo -> empty
Rule 68    def_tipo -> TOKEN_ID TOKEN_COLON type coma
Rule 69    coma -> TOKEN_COMMA TOKEN_ID TOKEN_COLON type coma
Rule 70    coma -> empty
Rule 71    var -> vars
Rule 72    var -> empty
Rule 73    f_call -> TOKEN_ID TOKEN_LPAREN def_exp TOKEN_RPAREN TOKEN_SEMICOLON
Rule 74    def_exp -> expresion coma2
Rule 75    def_exp -> empty
Rule 76    coma2 -> TOKEN_COMMA expresion coma2
Rule 77    coma2 -> empty
Rule 78    assign -> TOKEN_ID TOKEN_ASSIGN expresion TOKEN_SEMICOLON
Rule 79    empty -> <empty>

Terminals, with rules where they appear

TOKEN_ASSIGN         : 78
TOKEN_COLON          : 9 68 69
TOKEN_COMMA          : 10 25 26 69 76
TOKEN_CTE_FLOAT      : 33
TOKEN_CTE_INT        : 32
TOKEN_CTE_STRING     : 23 26
TOKEN_DIV            : 52
TOKEN_DO             : 28
TOKEN_ELSE           : 30
TOKEN_END            : 1
TOKEN_EQ             : 42
TOKEN_FLOAT          : 13
TOKEN_GE             : 40
TOKEN_GT             : 37
TOKEN_ID             : 1 9 10 61 64 65 68 69 73 78
TOKEN_IF             : 29
TOKEN_INT            : 12
TOKEN_LBRACE         : 14
TOKEN_LE             : 41
TOKEN_LPAREN         : 22 28 29 56 64 65 73
TOKEN_LT             : 38
TOKEN_MAIN           : 1
TOKEN_MINUS          : 45 48 59
TOKEN_MULT           : 53
TOKEN_NE             : 39
TOKEN_PLUS           : 44 47 58
TOKEN_PRINT          : 22
TOKEN_PROGRAM        : 1
TOKEN_RBRACE         : 14
TOKEN_RPAREN         : 22 28 29 56 64 65 73
TOKEN_SEMICOLON      : 1 9 22 28 29 65 73 78
TOKEN_VAR            : 6 7
TOKEN_VOID           : 65
TOKEN_WHILE          : 28
error                : 

Nonterminals, with rules where they appear

assign               : 17
body                 : 1 28 29 30 65
coma                 : 68 69
coma2                : 74 76
comas                : 23 24 25 26
comparar             : 34
condition            : 18
cte                  : 62
cycle                : 19
dec_funs             : 1 4
dec_statements       : 14 15
dec_var              : 1
def_exp              : 64 73
def_tipo             : 66
definicion           : 54
else                 : 29
empty                : 3 5 8 11 16 27 31 36 46 51 60 67 70 72 75 77
exp                  : 34 35
expresion            : 24 25 28 29 56 74 76 78
expresiones          : 22
f_call               : 20
f_call_expr          : 63
factor               : 49 50
funs                 : 4
id_cte               : 57
mas_ids              : 9 10
multi_div            : 49 50
opcion_mas_menos     : 
opciones_mas_menos   : 57
operacion_mul_div    : 50
operaciones          : 55
print                : 21
programa             : 0
rep_var              : 6 7
signo                : 35
statement            : 15
suma_resta           : 43 44 45
termino              : 43 44 45
tipo                 : 65
type                 : 9 68 69
var                  : 65
variable             : 6 7
vars                 : 2 71

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN body TOKEN_END

    TOKEN_PROGRAM   shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> TOKEN_PROGRAM . TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN body TOKEN_END

    TOKEN_ID        shift and go to state 3


state 3

    (1) programa -> TOKEN_PROGRAM TOKEN_ID . TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN body TOKEN_END

    TOKEN_SEMICOLON shift and go to state 4


state 4

    (1) programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON . dec_var dec_funs TOKEN_MAIN body TOKEN_END
    (2) dec_var -> . vars
    (3) dec_var -> . empty
    (6) vars -> . TOKEN_VAR variable rep_var
    (79) empty -> .

    TOKEN_VAR       shift and go to state 8
    TOKEN_VOID      reduce using rule 79 (empty -> .)
    TOKEN_MAIN      reduce using rule 79 (empty -> .)

    dec_var                        shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var . dec_funs TOKEN_MAIN body TOKEN_END
    (4) dec_funs -> . funs dec_funs
    (5) dec_funs -> . empty
    (65) funs -> . TOKEN_VOID TOKEN_ID TOKEN_LPAREN tipo TOKEN_RPAREN var body TOKEN_SEMICOLON
    (79) empty -> .

    TOKEN_VOID      shift and go to state 12
    TOKEN_MAIN      reduce using rule 79 (empty -> .)

    dec_funs                       shift and go to state 9
    funs                           shift and go to state 10
    empty                          shift and go to state 11

state 6

    (2) dec_var -> vars .

    TOKEN_VOID      reduce using rule 2 (dec_var -> vars .)
    TOKEN_MAIN      reduce using rule 2 (dec_var -> vars .)


state 7

    (3) dec_var -> empty .

    TOKEN_VOID      reduce using rule 3 (dec_var -> empty .)
    TOKEN_MAIN      reduce using rule 3 (dec_var -> empty .)


state 8

    (6) vars -> TOKEN_VAR . variable rep_var
    (9) variable -> . TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON

    TOKEN_ID        shift and go to state 14

    variable                       shift and go to state 13

state 9

    (1) programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs . TOKEN_MAIN body TOKEN_END

    TOKEN_MAIN      shift and go to state 15


state 10

    (4) dec_funs -> funs . dec_funs
    (4) dec_funs -> . funs dec_funs
    (5) dec_funs -> . empty
    (65) funs -> . TOKEN_VOID TOKEN_ID TOKEN_LPAREN tipo TOKEN_RPAREN var body TOKEN_SEMICOLON
    (79) empty -> .

    TOKEN_VOID      shift and go to state 12
    TOKEN_MAIN      reduce using rule 79 (empty -> .)

    funs                           shift and go to state 10
    dec_funs                       shift and go to state 16
    empty                          shift and go to state 11

state 11

    (5) dec_funs -> empty .

    TOKEN_MAIN      reduce using rule 5 (dec_funs -> empty .)


state 12

    (65) funs -> TOKEN_VOID . TOKEN_ID TOKEN_LPAREN tipo TOKEN_RPAREN var body TOKEN_SEMICOLON

    TOKEN_ID        shift and go to state 17


state 13

    (6) vars -> TOKEN_VAR variable . rep_var
    (7) rep_var -> . TOKEN_VAR variable rep_var
    (8) rep_var -> . empty
    (79) empty -> .

    TOKEN_VAR       shift and go to state 18
    TOKEN_VOID      reduce using rule 79 (empty -> .)
    TOKEN_MAIN      reduce using rule 79 (empty -> .)
    TOKEN_LBRACE    reduce using rule 79 (empty -> .)

    rep_var                        shift and go to state 19
    empty                          shift and go to state 20

state 14

    (9) variable -> TOKEN_ID . mas_ids TOKEN_COLON type TOKEN_SEMICOLON
    (10) mas_ids -> . TOKEN_COMMA TOKEN_ID mas_ids
    (11) mas_ids -> . empty
    (79) empty -> .

    TOKEN_COMMA     shift and go to state 22
    TOKEN_COLON     reduce using rule 79 (empty -> .)

    mas_ids                        shift and go to state 21
    empty                          shift and go to state 23

state 15

    (1) programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN . body TOKEN_END
    (14) body -> . TOKEN_LBRACE dec_statements TOKEN_RBRACE

    TOKEN_LBRACE    shift and go to state 25

    body                           shift and go to state 24

state 16

    (4) dec_funs -> funs dec_funs .

    TOKEN_MAIN      reduce using rule 4 (dec_funs -> funs dec_funs .)


state 17

    (65) funs -> TOKEN_VOID TOKEN_ID . TOKEN_LPAREN tipo TOKEN_RPAREN var body TOKEN_SEMICOLON

    TOKEN_LPAREN    shift and go to state 26


state 18

    (7) rep_var -> TOKEN_VAR . variable rep_var
    (9) variable -> . TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON

    TOKEN_ID        shift and go to state 14

    variable                       shift and go to state 27

state 19

    (6) vars -> TOKEN_VAR variable rep_var .

    TOKEN_VOID      reduce using rule 6 (vars -> TOKEN_VAR variable rep_var .)
    TOKEN_MAIN      reduce using rule 6 (vars -> TOKEN_VAR variable rep_var .)
    TOKEN_LBRACE    reduce using rule 6 (vars -> TOKEN_VAR variable rep_var .)


state 20

    (8) rep_var -> empty .

    TOKEN_VOID      reduce using rule 8 (rep_var -> empty .)
    TOKEN_MAIN      reduce using rule 8 (rep_var -> empty .)
    TOKEN_LBRACE    reduce using rule 8 (rep_var -> empty .)


state 21

    (9) variable -> TOKEN_ID mas_ids . TOKEN_COLON type TOKEN_SEMICOLON

    TOKEN_COLON     shift and go to state 28


state 22

    (10) mas_ids -> TOKEN_COMMA . TOKEN_ID mas_ids

    TOKEN_ID        shift and go to state 29


state 23

    (11) mas_ids -> empty .

    TOKEN_COLON     reduce using rule 11 (mas_ids -> empty .)


state 24

    (1) programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN body . TOKEN_END

    TOKEN_END       shift and go to state 30


state 25

    (14) body -> TOKEN_LBRACE . dec_statements TOKEN_RBRACE
    (15) dec_statements -> . statement dec_statements
    (16) dec_statements -> . empty
    (17) statement -> . assign
    (18) statement -> . condition
    (19) statement -> . cycle
    (20) statement -> . f_call
    (21) statement -> . print
    (79) empty -> .
    (78) assign -> . TOKEN_ID TOKEN_ASSIGN expresion TOKEN_SEMICOLON
    (29) condition -> . TOKEN_IF TOKEN_LPAREN expresion TOKEN_RPAREN body else TOKEN_SEMICOLON
    (28) cycle -> . TOKEN_WHILE TOKEN_LPAREN expresion TOKEN_RPAREN TOKEN_DO body TOKEN_SEMICOLON
    (73) f_call -> . TOKEN_ID TOKEN_LPAREN def_exp TOKEN_RPAREN TOKEN_SEMICOLON
    (22) print -> . TOKEN_PRINT TOKEN_LPAREN expresiones TOKEN_RPAREN TOKEN_SEMICOLON

    TOKEN_RBRACE    reduce using rule 79 (empty -> .)
    TOKEN_ID        shift and go to state 39
    TOKEN_IF        shift and go to state 40
    TOKEN_WHILE     shift and go to state 41
    TOKEN_PRINT     shift and go to state 42

    dec_statements                 shift and go to state 31
    statement                      shift and go to state 32
    empty                          shift and go to state 33
    assign                         shift and go to state 34
    condition                      shift and go to state 35
    cycle                          shift and go to state 36
    f_call                         shift and go to state 37
    print                          shift and go to state 38

state 26

    (65) funs -> TOKEN_VOID TOKEN_ID TOKEN_LPAREN . tipo TOKEN_RPAREN var body TOKEN_SEMICOLON
    (66) tipo -> . def_tipo
    (67) tipo -> . empty
    (68) def_tipo -> . TOKEN_ID TOKEN_COLON type coma
    (79) empty -> .

    TOKEN_ID        shift and go to state 43
    TOKEN_RPAREN    reduce using rule 79 (empty -> .)

    tipo                           shift and go to state 44
    def_tipo                       shift and go to state 45
    empty                          shift and go to state 46

state 27

    (7) rep_var -> TOKEN_VAR variable . rep_var
    (7) rep_var -> . TOKEN_VAR variable rep_var
    (8) rep_var -> . empty
    (79) empty -> .

    TOKEN_VAR       shift and go to state 18
    TOKEN_VOID      reduce using rule 79 (empty -> .)
    TOKEN_MAIN      reduce using rule 79 (empty -> .)
    TOKEN_LBRACE    reduce using rule 79 (empty -> .)

    rep_var                        shift and go to state 47
    empty                          shift and go to state 20

state 28

    (9) variable -> TOKEN_ID mas_ids TOKEN_COLON . type TOKEN_SEMICOLON
    (12) type -> . TOKEN_INT
    (13) type -> . TOKEN_FLOAT

    TOKEN_INT       shift and go to state 49
    TOKEN_FLOAT     shift and go to state 50

    type                           shift and go to state 48

state 29

    (10) mas_ids -> TOKEN_COMMA TOKEN_ID . mas_ids
    (10) mas_ids -> . TOKEN_COMMA TOKEN_ID mas_ids
    (11) mas_ids -> . empty
    (79) empty -> .

    TOKEN_COMMA     shift and go to state 22
    TOKEN_COLON     reduce using rule 79 (empty -> .)

    mas_ids                        shift and go to state 51
    empty                          shift and go to state 23

state 30

    (1) programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN body TOKEN_END .

    $end            reduce using rule 1 (programa -> TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON dec_var dec_funs TOKEN_MAIN body TOKEN_END .)


state 31

    (14) body -> TOKEN_LBRACE dec_statements . TOKEN_RBRACE

    TOKEN_RBRACE    shift and go to state 52


state 32

    (15) dec_statements -> statement . dec_statements
    (15) dec_statements -> . statement dec_statements
    (16) dec_statements -> . empty
    (17) statement -> . assign
    (18) statement -> . condition
    (19) statement -> . cycle
    (20) statement -> . f_call
    (21) statement -> . print
    (79) empty -> .
    (78) assign -> . TOKEN_ID TOKEN_ASSIGN expresion TOKEN_SEMICOLON
    (29) condition -> . TOKEN_IF TOKEN_LPAREN expresion TOKEN_RPAREN body else TOKEN_SEMICOLON
    (28) cycle -> . TOKEN_WHILE TOKEN_LPAREN expresion TOKEN_RPAREN TOKEN_DO body TOKEN_SEMICOLON
    (73) f_call -> . TOKEN_ID TOKEN_LPAREN def_exp TOKEN_RPAREN TOKEN_SEMICOLON
    (22) print -> . TOKEN_PRINT TOKEN_LPAREN expresiones TOKEN_RPAREN TOKEN_SEMICOLON

    TOKEN_RBRACE    reduce using rule 79 (empty -> .)
    TOKEN_ID        shift and go to state 39
    TOKEN_IF        shift and go to state 40
    TOKEN_WHILE     shift and go to state 41
    TOKEN_PRINT     shift and go to state 42

    statement                      shift and go to state 32
    dec_statements                 shift and go to state 53
    empty                          shift and go to state 33
    assign                         shift and go to state 34
    condition                      shift and go to state 35
    cycle                          shift and go to state 36
    f_call                         shift and go to state 37
    print                          shift and go to state 38

state 33

    (16) dec_statements -> empty .

    TOKEN_RBRACE    reduce using rule 16 (dec_statements -> empty .)


state 34

    (17) statement -> assign .

    TOKEN_ID        reduce using rule 17 (statement -> assign .)
    TOKEN_IF        reduce using rule 17 (statement -> assign .)
    TOKEN_WHILE     reduce using rule 17 (statement -> assign .)
    TOKEN_PRINT     reduce using rule 17 (statement -> assign .)
    TOKEN_RBRACE    reduce using rule 17 (statement -> assign .)


state 35

    (18) statement -> condition .

    TOKEN_ID        reduce using rule 18 (statement -> condition .)
    TOKEN_IF        reduce using rule 18 (statement -> condition .)
    TOKEN_WHILE     reduce using rule 18 (statement -> condition .)
    TOKEN_PRINT     reduce using rule 18 (statement -> condition .)
    TOKEN_RBRACE    reduce using rule 18 (statement -> condition .)


state 36

    (19) statement -> cycle .

    TOKEN_ID        reduce using rule 19 (statement -> cycle .)
    TOKEN_IF        reduce using rule 19 (statement -> cycle .)
    TOKEN_WHILE     reduce using rule 19 (statement -> cycle .)
    TOKEN_PRINT     reduce using rule 19 (statement -> cycle .)
    TOKEN_RBRACE    reduce using rule 19 (statement -> cycle .)


state 37

    (20) statement -> f_call .

    TOKEN_ID        reduce using rule 20 (statement -> f_call .)
    TOKEN_IF        reduce using rule 20 (statement -> f_call .)
    TOKEN_WHILE     reduce using rule 20 (statement -> f_call .)
    TOKEN_PRINT     reduce using rule 20 (statement -> f_call .)
    TOKEN_RBRACE    reduce using rule 20 (statement -> f_call .)


state 38

    (21) statement -> print .

    TOKEN_ID        reduce using rule 21 (statement -> print .)
    TOKEN_IF        reduce using rule 21 (statement -> print .)
    TOKEN_WHILE     reduce using rule 21 (statement -> print .)
    TOKEN_PRINT     reduce using rule 21 (statement -> print .)
    TOKEN_RBRACE    reduce using rule 21 (statement -> print .)


state 39

    (78) assign -> TOKEN_ID . TOKEN_ASSIGN expresion TOKEN_SEMICOLON
    (73) f_call -> TOKEN_ID . TOKEN_LPAREN def_exp TOKEN_RPAREN TOKEN_SEMICOLON

    TOKEN_ASSIGN    shift and go to state 54
    TOKEN_LPAREN    shift and go to state 55


state 40

    (29) condition -> TOKEN_IF . TOKEN_LPAREN expresion TOKEN_RPAREN body else TOKEN_SEMICOLON

    TOKEN_LPAREN    shift and go to state 56


state 41

    (28) cycle -> TOKEN_WHILE . TOKEN_LPAREN expresion TOKEN_RPAREN TOKEN_DO body TOKEN_SEMICOLON

    TOKEN_LPAREN    shift and go to state 57


state 42

    (22) print -> TOKEN_PRINT . TOKEN_LPAREN expresiones TOKEN_RPAREN TOKEN_SEMICOLON

    TOKEN_LPAREN    shift and go to state 58


state 43

    (68) def_tipo -> TOKEN_ID . TOKEN_COLON type coma

    TOKEN_COLON     shift and go to state 59


state 44

    (65) funs -> TOKEN_VOID TOKEN_ID TOKEN_LPAREN tipo . TOKEN_RPAREN var body TOKEN_SEMICOLON

    TOKEN_RPAREN    shift and go to state 60


state 45

    (66) tipo -> def_tipo .

    TOKEN_RPAREN    reduce using rule 66 (tipo -> def_tipo .)


state 46

    (67) tipo -> empty .

    TOKEN_RPAREN    reduce using rule 67 (tipo -> empty .)


state 47

    (7) rep_var -> TOKEN_VAR variable rep_var .

    TOKEN_VOID      reduce using rule 7 (rep_var -> TOKEN_VAR variable rep_var .)
    TOKEN_MAIN      reduce using rule 7 (rep_var -> TOKEN_VAR variable rep_var .)
    TOKEN_LBRACE    reduce using rule 7 (rep_var -> TOKEN_VAR variable rep_var .)


state 48

    (9) variable -> TOKEN_ID mas_ids TOKEN_COLON type . TOKEN_SEMICOLON

    TOKEN_SEMICOLON shift and go to state 61


state 49

    (12) type -> TOKEN_INT .

    TOKEN_SEMICOLON reduce using rule 12 (type -> TOKEN_INT .)
    TOKEN_COMMA     reduce using rule 12 (type -> TOKEN_INT .)
    TOKEN_RPAREN    reduce using rule 12 (type -> TOKEN_INT .)


state 50

    (13) type -> TOKEN_FLOAT .

    TOKEN_SEMICOLON reduce using rule 13 (type -> TOKEN_FLOAT .)
    TOKEN_COMMA     reduce using rule 13 (type -> TOKEN_FLOAT .)
    TOKEN_RPAREN    reduce using rule 13 (type -> TOKEN_FLOAT .)


state 51

    (10) mas_ids -> TOKEN_COMMA TOKEN_ID mas_ids .

    TOKEN_COLON     reduce using rule 10 (mas_ids -> TOKEN_COMMA TOKEN_ID mas_ids .)


state 52

    (14) body -> TOKEN_LBRACE dec_statements TOKEN_RBRACE .

    TOKEN_END       reduce using rule 14 (body -> TOKEN_LBRACE dec_statements TOKEN_RBRACE .)
    TOKEN_SEMICOLON reduce using rule 14 (body -> TOKEN_LBRACE dec_statements TOKEN_RBRACE .)
    TOKEN_ELSE      reduce using rule 14 (body -> TOKEN_LBRACE dec_statements TOKEN_RBRACE .)


state 53

    (15) dec_statements -> statement dec_statements .

    TOKEN_RBRACE    reduce using rule 15 (dec_statements -> statement dec_statements .)


state 54

    (78) assign -> TOKEN_ID TOKEN_ASSIGN . expresion TOKEN_SEMICOLON
    (34) expresion -> . exp comparar
    (43) exp -> . termino suma_resta
    (49) termino -> . factor multi_div
    (54) factor -> . definicion
    (55) factor -> . operaciones
    (56) definicion -> . TOKEN_LPAREN expresion TOKEN_RPAREN
    (57) operaciones -> . opciones_mas_menos id_cte
    (58) opciones_mas_menos -> . TOKEN_PLUS
    (59) opciones_mas_menos -> . TOKEN_MINUS
    (60) opciones_mas_menos -> . empty
    (79) empty -> .

    TOKEN_LPAREN    shift and go to state 68
    TOKEN_PLUS      shift and go to state 70
    TOKEN_MINUS     shift and go to state 71
    TOKEN_ID        reduce using rule 79 (empty -> .)
    TOKEN_CTE_INT   reduce using rule 79 (empty -> .)
    TOKEN_CTE_FLOAT reduce using rule 79 (empty -> .)

    expresion                      shift and go to state 62
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    definicion                     shift and go to state 66
    operaciones                    shift and go to state 67
    opciones_mas_menos             shift and go to state 69
    empty                          shift and go to state 72

state 55

    (73) f_call -> TOKEN_ID TOKEN_LPAREN . def_exp TOKEN_RPAREN TOKEN_SEMICOLON
    (74) def_exp -> . expresion coma2
    (75) def_exp -> . empty
    (34) expresion -> . exp comparar
    (79) empty -> .
    (43) exp -> . termino suma_resta
    (49) termino -> . factor multi_div
    (54) factor -> . definicion
    (55) factor -> . operaciones
    (56) definicion -> . TOKEN_LPAREN expresion TOKEN_RPAREN
    (57) operaciones -> . opciones_mas_menos id_cte
    (58) opciones_mas_menos -> . TOKEN_PLUS
    (59) opciones_mas_menos -> . TOKEN_MINUS
    (60) opciones_mas_menos -> . empty

    TOKEN_RPAREN    reduce using rule 79 (empty -> .)
    TOKEN_ID        reduce using rule 79 (empty -> .)
    TOKEN_CTE_INT   reduce using rule 79 (empty -> .)
    TOKEN_CTE_FLOAT reduce using rule 79 (empty -> .)
    TOKEN_LPAREN    shift and go to state 68
    TOKEN_PLUS      shift and go to state 70
    TOKEN_MINUS     shift and go to state 71

    def_exp                        shift and go to state 73
    expresion                      shift and go to state 74
    empty                          shift and go to state 75
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    definicion                     shift and go to state 66
    operaciones                    shift and go to state 67
    opciones_mas_menos             shift and go to state 69

state 56

    (29) condition -> TOKEN_IF TOKEN_LPAREN . expresion TOKEN_RPAREN body else TOKEN_SEMICOLON
    (34) expresion -> . exp comparar
    (43) exp -> . termino suma_resta
    (49) termino -> . factor multi_div
    (54) factor -> . definicion
    (55) factor -> . operaciones
    (56) definicion -> . TOKEN_LPAREN expresion TOKEN_RPAREN
    (57) operaciones -> . opciones_mas_menos id_cte
    (58) opciones_mas_menos -> . TOKEN_PLUS
    (59) opciones_mas_menos -> . TOKEN_MINUS
    (60) opciones_mas_menos -> . empty
    (79) empty -> .

    TOKEN_LPAREN    shift and go to state 68
    TOKEN_PLUS      shift and go to state 70
    TOKEN_MINUS     shift and go to state 71
    TOKEN_ID        reduce using rule 79 (empty -> .)
    TOKEN_CTE_INT   reduce using rule 79 (empty -> .)
    TOKEN_CTE_FLOAT reduce using rule 79 (empty -> .)

    expresion                      shift and go to state 76
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    definicion                     shift and go to state 66
    operaciones                    shift and go to state 67
    opciones_mas_menos             shift and go to state 69
    empty                          shift and go to state 72

state 57

    (28) cycle -> TOKEN_WHILE TOKEN_LPAREN . expresion TOKEN_RPAREN TOKEN_DO body TOKEN_SEMICOLON
    (34) expresion -> . exp comparar
    (43) exp -> . termino suma_resta
    (49) termino -> . factor multi_div
    (54) factor -> . definicion
    (55) factor -> . operaciones
    (56) definicion -> . TOKEN_LPAREN expresion TOKEN_RPAREN
    (57) operaciones -> . opciones_mas_menos id_cte
    (58) opciones_mas_menos -> . TOKEN_PLUS
    (59) opciones_mas_menos -> . TOKEN_MINUS
    (60) opciones_mas_menos -> . empty
    (79) empty -> .

    TOKEN_LPAREN    shift and go to state 68
    TOKEN_PLUS      shift and go to state 70
    TOKEN_MINUS     shift and go to state 71
    TOKEN_ID        reduce using rule 79 (empty -> .)
    TOKEN_CTE_INT   reduce using rule 79 (empty -> .)
    TOKEN_CTE_FLOAT reduce using rule 79 (empty -> .)

    expresion                      shift and go to state 77
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    definicion                     shift and go to state 66
    operaciones                    shift and go to state 67
    opciones_mas_menos             shift and go to state 69
    empty                          shift and go to state 72

state 58

    (22) print -> TOKEN_PRINT TOKEN_LPAREN . expresiones TOKEN_RPAREN TOKEN_SEMICOLON
    (23) expresiones -> . TOKEN_CTE_STRING comas
    (24) expresiones -> . expresion comas
    (34) expresion -> . exp comparar
    (43) exp -> . termino suma_resta
    (49) termino -> . factor multi_div
    (54) factor -> . definicion
    (55) factor -> . operaciones
    (56) definicion -> . TOKEN_LPAREN expresion TOKEN_RPAREN
    (57) operaciones -> . opciones_mas_menos id_cte
    (58) opciones_mas_menos -> . TOKEN_PLUS
    (59) opciones_mas_menos -> . TOKEN_MINUS
    (60) opciones_mas_menos -> . empty
    (79) empty -> .

    TOKEN_CTE_STRING shift and go to state 79
    TOKEN_LPAREN    shift and go to state 68
    TOKEN_PLUS      shift and go to state 70
    TOKEN_MINUS     shift and go to state 71
    TOKEN_ID        reduce using rule 79 (empty -> .)
    TOKEN_CTE_INT   reduce using rule 79 (empty -> .)
    TOKEN_CTE_FLOAT reduce using rule 79 (empty -> .)

    expresiones                    shift and go to state 78
    expresion                      shift and go to state 80
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    definicion                     shift and go to state 66
    operaciones                    shift and go to state 67
    opciones_mas_menos             shift and go to state 69
    empty                          shift and go to state 72

state 59

    (68) def_tipo -> TOKEN_ID TOKEN_COLON . type coma
    (12) type -> . TOKEN_INT
    (13) type -> . TOKEN_FLOAT

    TOKEN_INT       shift and go to state 49
    TOKEN_FLOAT     shift and go to state 50

    type                           shift and go to state 81

state 60

    (65) funs -> TOKEN_VOID TOKEN_ID TOKEN_LPAREN tipo TOKEN_RPAREN . var body TOKEN_SEMICOLON
    (71) var -> . vars
    (72) var -> . empty
    (6) vars -> . TOKEN_VAR variable rep_var
    (79) empty -> .

    TOKEN_VAR       shift and go to state 8
    TOKEN_LBRACE    reduce using rule 79 (empty -> .)

    var                            shift and go to state 82
    vars                           shift and go to state 83
    empty                          shift and go to state 84

state 61

    (9) variable -> TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON .

    TOKEN_VAR       reduce using rule 9 (variable -> TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON .)
    TOKEN_VOID      reduce using rule 9 (variable -> TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON .)
    TOKEN_MAIN      reduce using rule 9 (variable -> TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON .)
    TOKEN_LBRACE    reduce using rule 9 (variable -> TOKEN_ID mas_ids TOKEN_COLON type TOKEN_SEMICOLON .)


state 62

    (78) assign -> TOKEN_ID TOKEN_ASSIGN expresion . TOKEN_SEMICOLON

    TOKEN_SEMICOLON shift and go to state 85


state 63
